--- a/Quartz/src/main/webapp/WEB-INF/web.xml
+++ b/Quartz/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	<!-- 读取spring配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring-quartz.xml</param-value>
+		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
 	<filter>
 		<filter-name>SpringEncodingFilter</filter-name>
